_includes/css/main.css
/* ==========================================================================
   Site Specific Styles
   ========================================================================== */

body {padding:0;font-family:'Open Sans',sans-serif;font-size:14px;color:#111111;
  background-color: #F7F6F4;margin: 0;line-height: 1.8em;-webkit-font-smoothing: antialiased;}

p, ul, ol, table, dl {margin:0 0 22px;}

h1, h2, h3, h4, h5, h6 {font-weight:600;margin:16px 0 10px;text-transform: uppercase;}
h1, h2, h3 {line-height:1.3;display: block;padding-bottom: 5px;}
h1 {font-size: 30px;}
h2 {font-size: 24px;}
h3 {font-size: 18px;}

a {color:#21759b;text-decoration:none;}
a:hover {border-bottom: 1px solid red;}
a small {font-size: 12px;}

em {font-style: italic;}
strong {font-weight:600;}

ul {list-style: inside;padding-left: 25px;}
ol {list-style: decimal inside;padding-left: 20px;}

blockquote {background-color:#cddde4;border-left:4px solid #21759b;margin-left:20px;padding:15px;
    font-style: italic;}

dl, dt, dd, dl p {font-color: #444;}
dl dt {font-weight: bold;}
dl dd {padding-left: 20px;font-style: italic;}
dl p {padding-left: 20px;font-style: italic;}

hr {background: #c3c3c3;
  background-image:-webkit-gradient(linear, 0 0, 100% 0, from(#f7f6f4),to(#f7f6f4), color-stop(50%, #fff));
  background-image:-webkit-linear-gradient(left,#f7f6f4,#fff,#f7f6f4);
  background-image:-moz-linear-gradient(left,#f7f6f4,#fff,#f7f6f4);
  background-image:-ms-linear-gradient(left,#f7f6f4,#fff,#f7f6f4);
  background-image:-o-linear-gradient(left,#f7f6f4,#fff,#f7f6f4);border: 0;height: 3px;margin: 5px 0;}
hr::after {background-color: #f7f6f4;
  background-image:-webkit-gradient(linear,0 0,100% 0,from(#f7f6f4),to(#f7f6f4),color-stop(50%, #c3c3c3));
  background-image:-webkit-linear-gradient(left,#f7f6f4,#c3c3c3,#f7f6f4);
  background-image:-moz-linear-gradient(left,#f7f6f4,#c3c3c3,#f7f6f4);
  background-image:-ms-linear-gradient(left,#f7f6f4,#c3c3c3,#f7f6f4);
  background-image:-o-linear-gradient(left,#f7f6f4,#c3c3c3,#f7f6f4);content:'';display: block;height:1px;}

figure {border: 1px solid #aeaeae;-webkit-border-radius: 4px;-moz-border-radius: 4px;
    border-radius: 4px;margin:20px auto;padding:10px;width:340px;}


/* Images */
img {position: relative;margin: 0 auto;max-width: 650px;padding: 5px;}
p img {display: inline;margin: 0;padding: 0;vertical-align: middle;text-align: center;border: none;}

/* Code blocks */
code, pre {font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color:#000;font-size:14px;}
pre {padding: 4px 12px;background: #FDFEFB;-webkit-border-radius:4px;-moz-border-radius:4px;
  border-radius:4px;border:1px solid #D7D8C8;overflow: auto;overflow-y: hidden;margin-bottom: 32px;}


/* Tables */
table {width:100%;}
table {border: 1px solid #ccc;margin-bottom: 32px;text-align: left;}
th {ont-size: 18px;font-weight: normal;padding: 10px;background: #232323;color: #FDFEFB;}
td {padding: 10px;background: #ccc;}


/* ==========================================================================
   Layout styles
   ========================================================================== */

#container,
#page-header,
#content,
#main-content,
#secondary-content,
#page-footer {width: 100%;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;
    box-sizing: border-box;}
#content{max-width:1140px;}
#main-content article, #secondary-content aside {padding: 0.5em 1em;}


#page-header {margin: 0;text-align: center;}
#page-header::after {background:url(/assets/images/header.jpg) center top repeat-x;bottom:0;
    content:" ";filter: alpha(opacity=40);left: 0;opacity: 0.4;position: absolute;right: 0;
    top: 0;z-index:-1;}
#page-header hgroup {height: 140px;}
#page-header .site-title {font-size: 28px;padding-top: 25px;text-transform: none;}
#page-header .site-description {font-size: 14px;text-transform: none;}

#primary-navigation {display: none;}



#main-content hr{margin:40px 0;}


#main-content .post header {padding-bottom:10px;}
#main-content .post header.link {background:#21759b;filter:alpha(opacity=30);opacity:0.3;border:1px 
  solid #aeaeae;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
#main-content .post header h2 {margin-bottom:0;padding-bottom:0;}
#main-content .post header h2 a {color:#101010;}
#main-content .post header .meta {padding-bottom:5px;}
#main-content .post header .meta span,
#main-content .post header .meta time {font-size:smaller;}
#main-content .post footer{text-align:right;}
#main-content .post footer a.read-more{color:black;font-weight:600;padding:6px;}
#main-content .post footer a.read-more:hover{background-color:#21759b;color:white;}



#main-content .pagination{padding:20px 0;position:relative;text-align:center;}
#main-content .pagination a{color:black;font-weight:600;padding:6px;}
#main-content .pagination a:hover{background-color:#21759b;color:white;}
#main-content .pagination .next{position:absolute;left:0;}
#main-content .pagination .prev{position:absolute;right:0;}



#page-footer {text-align: center;}
#page-footer .social {padding:10px 0;}
#page-footer .social a {filter:alpha(opacity=30);opacity: 0.3;}
#page-footer .social a:hover {filter:alpha(opacity=100);opacity: 1;}





/* ==========================================================================
   Archive Page Styles
   ========================================================================== */

#archive {
    list-style: none;
}

    #archive .year, 
    #archive .month,
    #archive .day {
        color: #606060;
        display: block;
        font-weight: normal;
        margin: 0;
        padding: 18px 0 0;
        text-align: center;
        width: 88px;
    }

    #archive .year {
        font-size: 22px;
        padding: 35px 0 0;
    }
    
    #archive .day {
        display: inline-block;
        padding: 0;
    }








/* ==========================================================================
   Helper classes
   ========================================================================== */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

.alignleft {float: left;margin: 2px 5px 4px -5px;}
.aligncentre {margin: 0 auto;text-align:center;}
.alignright {float: right;margin: 2px -5px 4px 5px;}

